--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "test:all": "backstage-cli repo test --coverage",
     "test:e2e": "playwright test",
     "fix": "backstage-cli repo fix",
-    //"lint": "backstage-cli repo lint --since origin/master",
-    //"lint:all": "backstage-cli repo lint",
+    "lint": "backstage-cli repo lint --since origin/master",
+    "lint:all": "backstage-cli repo lint",
     "prettier:check": "prettier --check .",
     "new": "backstage-cli new"
   },
@@ -53,7 +53,6 @@
   },
   "packageManager": "yarn@4.4.1",
   "dependencies": {
-    "@google-cloud/firestore": "^8.0.0",
-    "dotenv": "^17.2.3"
+    "@google-cloud/firestore": "^8.0.0"
   }
 }
