React to open a referenced template in a new window with auto-filling params

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -95,6 +95,11 @@ catalog:
       target: ../../examples/template/local-template.yaml
       rules:
         - allow: [Template]
+    
+    - type: file
+      target: ../../examples/template/drn-decision-template.yaml
+      rules:
+        - allow: [Template]    
 
     # Local example organizational data
     - type: file
