--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,36 @@
-node_modules
+node_modules/
+
+# Build
+dist/
+build/
+*.tgz
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Environment
+/.env
+/.envrc
+docker/.env
+docker/local.env
+.env.*
+
+# Dependencies
+.pnp.*
+
+# Logs
+npm-debug-log*
+yarn-debug.log*
+yarn-error.log*
+
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+.terraform.lock.hcl
+
+# yarn
+.yarnlock
